# PromLokiEmailReporter

./: CHANGELOG.md  LokiClient.py  README.md  loki_client.py  main.py  metric_memo.py  pyproject.toml
.github/workflows/: release.yml
src/metric_memo/: __main__.py
src/metric_memo/queries/: service.py
templates/: weekly.html.jinja
