[project]
name = "metric-memo"
version = "0.1.0"
description = "Automated Prometheus and Loki Email Reporter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "prometheus-api-client>=0.7.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[project.scripts]
metric-memo = "metric_memo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
